--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              false
+title:              Genuine Prep
 bio:                'Free SAT and ACT prep from high-scoring students.'
 description:        "Free SAT and ACT prep from high-scoring students."
 reading_time:       true
