--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:        "Free SAT and ACT prep from high-scoring students."
 reading_time:       true
 words_per_minute:   200
 logo:               'GenuinePrep.github.io/assets/img/logo.png'
-background:         'GenuinePrep.github.io/assets/img/placeholder-big.jpg'
+background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://genuineprep.github.io/
