--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,4 @@
 # Site navigation links
 
-- title: Discord
-  url: https://discord.gg/xDq5sN3
+#- title: Discord
+  #url: https://discord.gg/xDq5sN3
