--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ bio:                'Free SAT and ACT prep from high-scoring students.'
 description:        "Free SAT and ACT prep from high-scoring students."
 reading_time:       true
 words_per_minute:   200
-logo:               'GenuinePrep.github.io/assets/img/logo.png'
+logo:               'logicalprep.github.io/assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://genuineprep.github.io/
+url:                https://logicalprep.github.io/
 
 # Jekyll
 permalink:          /:title/
