--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title:              
+title:              Logical Prep
 bio:                
-description:        
+description:        Private SAT Math tutoring in the Ann Arbor Area
 reading_time:       true
 words_per_minute:   200
 logo:               'logicalprep.github.io/assets/img/logo.png'
