--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              Logical Prep
-bio:                
-description:        Private SAT Math tutoring in the Ann Arbor Area
+bio:                Private SAT Math tutoring in the Ann Arbor Area
+description:        Logical Prep offers private SAT Math tutoring from 
 reading_time:       true
 words_per_minute:   200
 logo:               'logicalprep.github.io/assets/img/logo.png'
