--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              Logical Prep
+title:              Logical
 bio:                Private SAT Math tutoring in the Ann Arbor Area
 description:        
 reading_time:       true
