--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Logical
-bio:                Private SAT Math tutoring in the Ann Arbor Area
+bio:                Private SAT Math tutoring in the Ann Arbor area
 description:        
 reading_time:       true
 words_per_minute:   200
