--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description:
 reading_time:       true
 words_per_minute:   200
 logo:               'logicalprep.github.io/assets/img/logo.png'
-background:         'assets/img/placeholder-big.jpg'
+background:         'assets/img/blackboardbackground.png'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                https://logicalprep.github.io/
